projekt-compiler/test/misc/unsorted/success/s_multi_use_size.rail
$'main'(--):
 \
  \
   \
    \
     \
      \
       \         #
        \        |
         \       |
          ----[size]---(!size!)--\
                 |               |
                 \---[ezis]------/

result: 4