projekt-compiler/test/misc/unsorted/fail/s_simplest_func (9).rail
$'main'(--):
 \
  \
   \               
    \             
     \           
      \         
       \       #
        \      |
         \     |
          ----[~]---(!~!)--\
               |           |
               \-:[a]--[2]-/


result:

"a"
"2"